# facedetection_Android

./: README.md  build.gradle.kts  lockerd.c  settings.gradle.kts
app/: agconnect-services.json  build.gradle.kts
app/src/androidTest/java/com/example/facedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model.param
app/src/main/cpp/: CMakeLists.txt  face_detector.cpp  face_detector.h  native-lib.cpp
app/src/main/java/com/example/facedemo/: AppDatabase.java  CabinetActivity.java  CameraFrameAnalyzer.java  FaceNative.java  FaceRect.java  HomeActivity.java  ImageUtil.java  LockerDao.java  LockerEntity.java  MainActivity.java  UserDao.java  UserEntity.java  YuvToRgbConverter.java
app/src/main/res/drawable/: ace_frame_dash.xml  bg_cabinet_occupied.xml  idle_bg.xml  occupied_bg.xml  shape_face_frame.xml
app/src/main/res/layout/: activity_admin.xml  activity_admin_login.xml  activity_cabinet_status.xml  activity_face_recognition.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
